--- a/EduMaking-Backend/bin/src/main/resources/application.properties
+++ b/EduMaking-Backend/bin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/edumaking?serverTimezone=America/Bogota
+spring.datasource.url=jdbc:mysql://localhost:3316/edumaking?serverTimezone=America/Bogota
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
